0.17 - in development
---------------------
What's new in this release:

 * New encoding selector added to qdiff, qannotate and qcat. 
   This selector allows change of the text encoding "on the fly".
 * Added new context menu action in qlog to tag a revision.
 * Added Czech translations.
 * Double click on file item in conflicts window opens merge tool.

Changelog:

 * qannotate, qcat, qdiff:
   * Added encoding selector. (INADA Naoki)
 * qconflicts:
   * Double click on file item opens merge tool. (Eugene Tarasenko)
 * qdiff:
   * Fixed problem with invoking external diff from qdiff dialog 
     when the current directory is not repository root. 
     (Bug #439084, Alexander Belchenko)
 * qlog:
   * Added "tag revision" action to context menu. (Craig Hewetson)
   * Robust handling of bogus --fixed properties. (Bug #436834, Craig Hewetson)
 * treewidget:
   * Fixed compatibility with PyQt < 4.6. 
     (Bug #479093, Bug #478979, Gary van der Merwe)
   * Extended keyboard navigation: pressing Enter invokes default action
     for selected item. (Bug #483597, Alexander Belchenko)
   * Fixed is_ignored() check (versioned file that matches ignore pattern
     should not be called "ignored"). (Bug #487560, Alexander Belchenko)


0.16 "Acacia" - 2009/11/9
-------------------------
What's new in this release:

 * qswitch:
   * Added support for --create-branch option to "bzr switch". (A. S. Budden)
 * SubprocessUIFactory and QUIFactory now both support get_username, and
   get_boolean. (Bug #421851, Gary van der Merwe)
 * Save the size of Dialogs when the user press Esc. (Bug #417809,
   Gary van der Merwe)
 * qlog:
   * Get the max main_line digets in a different way so that we don't break 
     --no-graph. (Bug #455867, Gary van der Merwe)
   * Corrected the margin for the revision number column. (Gary van der Merwe)
   * When loading the file list delta, only lock the repositories that are
     being used. If the 2 trees are from the same repositories, load them 